# paxix

./: .gitignore  .travis.yaml  .travis.yml  Makefile  Makefile.am  README.md  configure  configure.ac  hash_table.h  hash_table_driver.c  lex.yy.c  paxi_parser.tab.h  paxi_parser.y  scanner_test_driver.c
examples/: test4.paxi  towers_of_hanoi.paxi
src/: Makefile  Makefile.am  ast.h  hash_table.c  op_codes.h  paxi_parser.tab.c  paxi_parser.tab.h  paxi_parser.y  paxi_scanner.l  paxic.c  pvm.c  string_list.c  string_list.h  symbol_table.c  symbol_table.h  tokens.h
test/: sieve.paxi  test6.paxi
